--- a/src/styles/bill-view.scss
+++ b/src/styles/bill-view.scss
@@ -5,6 +5,11 @@
   flex-direction: column;
   width: 100%;
 
+  #chart-area {
+    display: flex;
+    justify-content: center;
+  }
+
   .filter-bar {
     display: flex;
     justify-content: center;
